--- a/TPIfront/index.html
+++ b/TPIfront/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TP Integrador Front Stefanucci</title>
 </head>
+
 <body>
-    
+    <header>
+        <div><img src="./images/codoacodo.png" width="100px" height="100" alt="logo codo a codo" title="Logo"></div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="#" target="_blank">Index</a></li>
+                </ul>
+            </nav>
+        </div>
+
+    </header>
+    <!--carrusel-->
+    <section>
+
+
+    </section>
+    <!--fin carrusel-->
+    <!--oradores-->
 </body>
+
 </html>
