--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/images/codoacodo.png" alt="" width="100" class="d-inline-block align-text-top">
+                    <img src="images/codoacodo.png" alt="" width="100" class="d-inline-block align-text-top">
                 </a>
                     <ul class="navbar-nav">
                         <li class="nav-item ml-auto">
