--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <div class="carousel-item">
             <img style="opacity: 0.6;" src="images/ba2.jpg" class="d-block w-100" alt="imagen2">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Conf Bs As</h5>
+              <p>Bs As aterriza en Argentina. Un evento que explora el futuro digital. Conoce a los asistentes, conecta con la comunidad y escucha a los expertos en tecnología. ¡No faltes!</p>
               <div class="d-flex justify-content-end">
                 <button class="btn btn-primary btn-radial" style="margin-right: 5px; background-color: rgba(0, 0, 0, 0); border-color: white;">Quiero ser orador</button>
                 <button class="btn btn-success btn-radial">Comprar tickets</button>
@@ -86,8 +86,8 @@
           <div class="carousel-item">
             <img style="opacity: 0.6;" src="images/ba3.jpg" class="d-block w-100" alt="imagen3">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Conf Bs As</h5>
+              <p>Un evento para descubrir las innovaciones tecnológicas. Conoce a los participantes, conecta con la comunidad y escucha a los líderes que están dando forma al futuro. ¡Te esperamos!</p>
               <div class="d-flex justify-content-end">
                 <button class="btn btn-primary btn-radial" style="margin-right: 5px; background-color: rgba(0, 0, 0, 0); border-color: white;">Quiero ser orador</button>
                 <button class="btn btn-success btn-radial">Comprar tickets</button>
@@ -132,7 +132,7 @@
                                 <span class="span-destacado" style="background-color: red;">CSS</span>
                             </div>
                             <h5>Bill Gates</h5>
-                            <p style="max-width: 250px;">Steve Jobs un influyente empresario y cofundador de Apple. Su enfoque en la innovación y el diseño revolucionó la industria tecnológica, dejando un legado duradero.</p>
+                            <p style="max-width: 250px;">Bill Gates, un influyente empresario y cofundador de Microsoft. Su enfoque en el software y la informática personal transformó la industria tecnológica, dejando un legado perdurable.</p>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                                 <span class="span-destacado" style="background-color: rgb(105, 105, 0);">Django</span>
                             </div>
                             <h5>Ada Lovelace</h5>
-                            <p style="max-width: 250px;">Steve Jobs un influyente empresario y cofundador de Apple. Su enfoque en la innovación y el diseño revolucionó la industria tecnológica, dejando un legado duradero.</p>
+                            <p style="max-width: 250px;">Ada Lovelace, una influyente matemática y escritora británica del siglo XIX. Su enfoque en la programación y la teoría de la computación anticipó el futuro de la informática, dejando un legado perdurable.</p>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                     </div>
                     <div class="col-md-6">
                         <h2 style="color: white; margin-top: 10px;">Bs As - Octubre</h2>
-                        <p style="color: white; font-size: 80%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. At placeat molestias vitae unde facere voluptatem minus voluptates commodi corrupti tenetur! Pariatur qui enim animi sapiente sed error similique molestiae ipsum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, excepturi deleniti harum facilis id, a illo assumenda officiis illum praesentium eos. Qui laborum ratione in hic ducimus debitis voluptatum aperiam.</p>
+                        <p style="color: white; font-size: 80%;">Estamos encantados de presentarles un mes lleno de innovación, descubrimientos y tendencias tecnológicas de vanguardia. En estas conferencias, reuniremos a expertos líderes de la industria, visionarios y apasionados por la tecnología para explorar temas candentes y futuros prometedores.</p>
                         <a style="border: 1px solid white; padding: 1% ;" href="#">Conocé más</a>
                     </div>
                 </div>
